@@ -889,35 +889,6 @@ class TestCase::Sys::Socket {
     return 1;
   }
 
-  static method ioctlsocket : int ($port : int) {
-    # Socket
-    my $socket = Sys::Socket->socket(SOCKET->AF_INET, SOCKET->SOCK_STREAM, 0);
-    
-    unless ($socket> 0) {
-      return 0;
-    }
-
-    # Close socket at the end of this scope
-    my $socket_auto_close = TestUtil::SocketAutoClose->new($socket);
-    
-    # IPv4 address
-    my $address = Sys::Socket::Sockaddr::In->new;
-    $address->set_sin_family((byte)SOCKET->AF_INET);
-    $address->set_sin_port(Sys::Socket->htons((short)$port));
-    my $sin_addr = $address->copy_sin_addr;
-    $sin_addr->set_s_addr(Sys::Socket->htonl(SOCKET->INADDR_ANY));
-    $address->set_sin_addr($sin_addr);
-    
-    my $value = 1;
-    my $status_ioctlsocket = Sys::Socket->ioctlsocket($socket, IOCTL->FIONBIO, \$value);
-    
-    unless ($status_ioctlsocket == 0) {
-      return 0;
-    }
-    
-    return 1;
-  }
-
   static method sockaddr_strage : int () {
     my $address = Sys::Socket::Sockaddr::Storage->new;
     
